--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,17 +26,18 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-  
-    - name: Login to Docker Hub
-    uses: docker/login-action@v3
-    with:
-      username: ${{ vars.DOCKERHUB_USERNAME }}
-      password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
     - name: Build and push
-    uses: docker/build-push-action@v6
-    with:
-      push: true
-      tags:syahlaserinda7/docker-syahla:lates
+      id: docker_build
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags:syahlaserinda7/docker-syahla:latest
 
    
